--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/aulakhhardeep/team-profile-generator/issues"
   },
-  "homepage": "https://github.com/aulakhhardeep/team-profile-generator#readme"
+  "homepage": "https://github.com/aulakhhardeep/team-profile-generator#readme",
+  "dependencies": {
+    "inquirer": "^8.1.1"
+  }
 }
